#summary ChangeLog for fookebox
#labels Featured,Phase-Deploy

== 0.3.0 ==

 * Switched to using PHP's internal JSON functions on recent PHP versions
 * Albums in search results are now automatically expanded
 * Added support for forward/back buttons
 * Updated smarty

== 0.2.0 ==

 * Added the ability to auto-queue songs when the playlist gets empty
 * Fixed some issues when running fookebox in a sub directory
 * Switched to using prototype for JSON data transport
 * Updated smarty, scriptaculous and prototype to their latest versions

== 0.1.1 ==

 * Made the right part scrollable without scrolling the whole window (fixes #1)
 * Made sure all clients are informed on playlist updates (fixes #2)
 * Updated smarty to version 2.6.19
 * Updated the JavaScript JSON library
 * Minor documentation updates