@@ -6,7 +6,9 @@
  * Switched to using PHP's internal JSON functions on recent PHP versions
  * Albums in search results are now automatically expanded
  * Added support for forward/back buttons
+ * Fixed filename/any search
  * Updated smarty
+ * Code cleanup
 
 == 0.2.0 ==
 
